--- a/config.toml
+++ b/config.toml
@@ -100,11 +100,11 @@ offlineSearch = false
 # Add your release versions here
 [[params.versions]]
   version = "v3.0"
-  url = "https://dubbo.apache.org/zh/docs/"
+  url = "https://chickenlj.github.io/incubator-dubbo-website/zh/docs/"
 
 [[params.versions]]
   version = "v2.7"
-  url = "https://dubbo.apache.org/zh/docsv2.7/"
+  url = "https://chickenlj.github.io/incubator-dubbo-website/zh/docsv2.7/"
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
