--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,7 +3,7 @@ name: Website Deploy
 on:
   push:
     branches:
-      - try-version-docing
+      - master
   pull_request:
     types: [ opened, synchronize, reopened, closed ]
     branches:
@@ -38,7 +38,7 @@ jobs:
         run: cp .htaccess ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/try-version-docing'
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: asf-site
