--- a/config.toml
+++ b/config.toml
@@ -100,7 +100,7 @@ offlineSearch = false
 # Add your release versions here
 [[params.versions]]
   version = "v3.0"
-  url = "c"
+  url = "https://dubbo.apache.org/zh/docs/"
 
 [[params.versions]]
   version = "v2.7"
