fix version name duplication

--- a/config.toml
+++ b/config.toml
@@ -97,13 +97,15 @@ offlineSearch = false
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
 
+version = "v3.0"
+
 # Add your release versions here
 [[params.versions]]
-  version = "v3.0"
+  version = "v3.0 (latest)"
   url = "https://dubbo.apache.org/zh/docs/"
 
 [[params.versions]]
-  version = "v2.7"
+  version = "v2.x"
   url = "https://dubbo.apache.org/zh/docsv2.7/"
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
@@ -114,11 +116,6 @@ version_menu = "v3.0 (latest)"
 # banner on every page indicating that this is an archived version of the docs.
 # Set this flag to "true" if you want to display the banner.
 archived_version = false
-
-# The version number for the version of the docs represented in this doc set.
-# Used in the "version-banner" partial to display a version number for the 
-# current doc set.
-version = "v3.0"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
