fix releases dropdown

--- a/config.toml
+++ b/config.toml
@@ -90,6 +90,12 @@ copyright = "The Apache Software Foundation. Apache and the Apache feather logo 
 algolia_docsearch = true
 offlineSearch = false
 
+
+version = "3.0"
+archived_version = true
+version_menu = "Releases"
+url_latest_version = "https://dubbo.apache.org/zh/docs/"
+
 # Add your release versions here
 [[params.versions]]
   version = "v3.0 (latest)"
@@ -98,10 +104,6 @@ offlineSearch = false
 [[params.versions]]
   version = "v2.x"
   url = "https://dubbo.apache.org/zh/docsv2.7/"
-
-version = "v3.0"
-archived_version = false
-url_latest_version = "https://dubbo.apache.org/zh/docs/"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/apache/dubbo-website"
