--- a/config.toml
+++ b/config.toml
@@ -92,7 +92,7 @@ offlineSearch = false
 
 
 version = "3.0"
-archived_version = true
+archived_version = false
 version_menu = "Releases"
 url_latest_version = "https://dubbo.apache.org/zh/docs/"
 
