--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "themes/docsy"]
 	path = themes/docsy
 	url = https://github.com/google/docsy.git
+[submodule ".github/themes/docsy"]
+	path = .github/themes/docsy
+	url = git@github.com:google/docsy.git
