docs: fix `mailto` tag
fix `mailto` tag

--- a/config.toml
+++ b/config.toml
@@ -175,7 +175,7 @@ desc = "Development takes place here!"
 #        desc = "Chat with other project developers"
 [[params.links.developer]]
 name = "Subscribe to mailing list"
-url = "mailto://dev-subscribe@dubbo.apache.org"
+url = "mailto:dev-subscribe@dubbo.apache.org"
 icon = "fa fa-envelope"
 desc = "Discuss development issues around the project"
 
