--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,29 @@
+# no cahce for root index redirection
+<If "%{REQUEST_URI} =~ m#^/?([\w\-]+\.html)?$#">
+    <IfModule mod_expires.c>
+        ExpiresActive off
+    </IfModule>
+
+    <IfModule mod_headers.c>
+        Header always set Cache-Control "no-store, no-cache, must-revalidate"
+        Header always set Expires "Thu, 01 Dec 1994 16:00:00 GMT"
+        Header always merge Vary "Accept-Language"
+    </IfModule>
+</If>
+
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteCond %{SERVER_PORT} !^443$
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+  RewriteEngine On
+  RewriteCond %{SERVER_PORT} !^443$
+  RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
+  RewriteCond "%{HTTP:Accept-Language}" ^zh [NC]
+  RewriteRule ^/?(index\.html)?$ "/zh/index.html" [L,R=302]
 
-RewriteRule ^/$ /en [L,R=301]
+  RewriteRule ^/?(index\.html)?$ "/en/index.html" [L,R=302]
+
+  RewriteCond "%{HTTP:Accept-Language}" ^zh [NC]
+  RewriteRule ^/?([\w\-]+)\.html$ "/zh/$1.html" [L,R=302]
+
+  RewriteRule ^/?([\w\-]+)\.html$ "/en/$1.html" [L,R=302]
 
 </IfModule>
