--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ enableGitInfo = true
 enableRobotsTXT = true
 
 # Language settings
-contentDir = "content/cn"
+contentDir = "content/en"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
 # Useful when translating.
