--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,11 +3,7 @@ name: Website Deploy
 on:
   push:
     branches:
-      - master
-  pull_request:
-    types: [ opened, synchronize, reopened, closed ]
-    branches:
-      - master
+      - refactor/docs
 
 
 jobs:
@@ -38,7 +34,7 @@ jobs:
         run: cp .htaccess ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/refactor/docs'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: asf-site
