stop building refactor/docs branch

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,8 +3,11 @@ name: Website Deploy
 on:
   push:
     branches:
-      - refactor/docs
-
+      - master
+  pull_request:
+    types: [ opened, synchronize, reopened, closed ]
+    branches:
+      - master
 
 jobs:
   build_and_deploy_job:
@@ -34,7 +37,7 @@ jobs:
         run: cp .htaccess ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/refactor/docs'
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: asf-site
