--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,7 +3,11 @@ name: Website Deploy
 on:
   push:
     branches:
-      - refactor/docs
+      - master
+  pull_request:
+    types: [ opened, synchronize, reopened, closed ]
+    branches:
+      - master
 
 jobs:
   build_and_deploy_job:
