--- a/config.toml
+++ b/config.toml
@@ -107,7 +107,7 @@ url_latest_version = "https://dubbo.apache.org/zh/docs/"
 
 [[params.versions]]
   version = "v3.0(building)"
-  url = "https://dubbo.apache.org/zh/docs3-building/"
+  url = "https://dubbo.apache.org/zh/docs3-building/docs"
 
 
 # Add Ecosystems
