repliace git protocol to https

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 	url = https://github.com/google/docsy.git
 [submodule ".github/themes/docsy"]
 	path = .github/themes/docsy
-	url = git@github.com:google/docsy.git
+	url = https://github.com/google/docsy.git
