--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,8 @@
 tasks:
   - init: |
       git submodule update --init --recursive
+      # auto install hugo-extended
       npm install
-      brew install hugo
     command: hugo server --disableFastRender
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
