public for open & npm install dep

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,7 @@ tasks:
   - init: |
       git submodule update --init --recursive
       npm install
+      cd themes/docsy/ && npm install && cd ../../
       npm install -g hugo-extended
     command: hugo server --disableFastRender
 
@@ -10,3 +11,4 @@ tasks:
 ports:
   - port: 1313
     onOpen: open-preview
+    visibility: public
