--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,10 +5,10 @@ tasks:
       npm install
       cd themes/docsy/ && npm install && cd ../../
       npm install -g hugo-extended
-    command: hugo server --disableFastRender
+    command: hugo server --disableFastRender --bind=0.0.0.0 --port=1313 --baseURL=$(gp url 1313) --appendPort=false
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
   - port: 1313
-    onOpen: open-preview
+    onOpen: open-browser
     visibility: public
