fix reopen workspace

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,14 +16,12 @@
 #
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - name: Install dependency
+  - name: Install dependency & Start hugo server
     before: |
       git submodule update --init --recursive
       npm install
       cd themes/docsy/ && npm install && cd ../../
       npm install -g hugo-extended
-
-  - name: Start hugo server
     command: hugo server --disableFastRender --bind=0.0.0.0 --port=1313 --baseURL=$(gp url 1313) --appendPort=false
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
