--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/apache/dubbo-website/issues"
   },
-  "homepage": "http://dubbo.io",
+  "homepage": "https://dubbo.apache.org",
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.2"
