--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -1,5 +1,7 @@
 name: Link Check
 
+on: [push, pull_request, workflow_dispatch]
+
 jobs:
   build_and_deploy_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
