--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Setup Html Test
         run: curl https://htmltest.wjdp.uk | bash
       - name: Lint
-        run: ./bin/htmltest public
+        run: ./bin/htmltest
 
