--- a/config.toml
+++ b/config.toml
@@ -163,10 +163,10 @@ url = "https://lists.apache.org/list.html?dev@dubbo.apache.org"
 icon = "fa fa-envelope"
 desc = "Discussion and help from your fellow users"
 [[params.links.user]]
-name = "Twitter"
-url = "https://twitter.com/ApacheDubbo"
-icon = "fab fa-twitter"
-desc = "Follow us on Twitter to get the latest news!"
+name = "Bilibili"
+url = "https://space.bilibili.com/1395485052"
+icon = "fa-brands fa-bilibili"
+desc = "Follow us on Bilibili to get the latest news!"
 #[[params.links.user]]
 #	name = "Stack Overflow"
 #	url = "https://example.org/stack"
