--- a/config.toml
+++ b/config.toml
@@ -162,11 +162,11 @@ name = "Dubbo mailing list archive"
 url = "https://lists.apache.org/list.html?dev@dubbo.apache.org"
 icon = "fa fa-envelope"
 desc = "Discussion and help from your fellow users"
-[[params.links.user]]
-name = "Bilibili"
-url = "https://space.bilibili.com/1395485052"
-icon = "fa-brands fa-bilibili"
-desc = "Follow us on Bilibili to get the latest news!"
+#[[params.links.user]]
+#name = "Bilibili"
+#url = "https://space.bilibili.com/1395485052"
+#icon = "fa-brands fa-bilibili"
+#desc = "Follow us on Bilibili to get the latest news!"
 #[[params.links.user]]
 #	name = "Stack Overflow"
 #	url = "https://example.org/stack"
