--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -2,3 +2,6 @@ DirectoryPath: public
 IgnoreAltMissing: true
 IgnoreInternalEmptyHash: true
 IgnoreDirectoryMissingTrailingSlash: true
+DocumentConcurrencyLimit: 1024
+HTTPConcurrencyLimit: 64
+ExternalTimeout: 3
