--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -5,3 +5,4 @@ IgnoreDirectoryMissingTrailingSlash: true
 DocumentConcurrencyLimit: 1024
 HTTPConcurrencyLimit: 1024
 ExternalTimeout: 15
+IgnoreURLs: ["http://javatar.iteye.com/.*", "https://www.baeldung.com/bdd-mockito", "https://docs.github.com/.*", "http://start.dubbo.io", "https://apachecon.dukecon.org/acna/2018/#/scheduledEvent/b8db9dc580d85853f"]
