--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -30,4 +30,6 @@ jobs:
         run: curl https://htmltest.wjdp.uk | bash
       - name: Lint
         run: ./bin/htmltest
-
+      - name: Lint failed list
+        if: failure()
+        run: cat tmp/.htmltest/htmltest.log
