--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -5,4 +5,16 @@ IgnoreDirectoryMissingTrailingSlash: true
 DocumentConcurrencyLimit: 1024
 HTTPConcurrencyLimit: 256
 ExternalTimeout: 15
-IgnoreURLs: ["http://javatar.iteye.com/.*", "https://www.baeldung.com/bdd-mockito", "https://docs.github.com/.*", "http://start.dubbo.io", "https://apachecon.dukecon.org/acna/2018/#/scheduledEvent/b8db9dc580d85853f", "https://www.webjars.org/documentation#servlet3", "https://github.com/apache/dubbo-website/edit/master/content/.*", "https://developer.aliyun.com/article/"]
+LogLevel: 1
+IgnoreURLs: [
+  # starter not available => temp ignore
+  "http://start.dubbo.io",
+  # edit page => always ignore
+  "https://github.com/apache/dubbo-website/edit/master/content/.*",
+  # docs external link might temporally unavailable => always ignore
+  "http://javatar.iteye.com/.*",
+  "https://www.baeldung.com/bdd-mockito",
+  "https://docs.github.com/.*",
+  "https://apachecon.dukecon.org/acna/2018/#/scheduledEvent/b8db9dc580d85853f",
+  "https://www.webjars.org/documentation#servlet3",
+  "https://developer.aliyun.com/article/"]
