--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -2,8 +2,9 @@ DirectoryPath: public
 IgnoreAltMissing: true
 IgnoreInternalEmptyHash: true
 IgnoreDirectoryMissingTrailingSlash: true
-DocumentConcurrencyLimit: 1024
-HTTPConcurrencyLimit: 256
+TestFilesConcurrently: true
+DocumentConcurrencyLimit: 128
+HTTPConcurrencyLimit: 32
 ExternalTimeout: 15
 LogLevel: 1
 IgnoreURLs: [
