--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -30,6 +30,12 @@ jobs:
         run: curl https://htmltest.wjdp.uk | bash
       - name: Lint
         run: ./bin/htmltest
-      - name: Lint failed list
+      - name: Print lint failed list if failure
         if: failure()
-        run: cat tmp/.htmltest/htmltest.log
+        run: cat tmp/.htmltest/htmltest.log | grep -v "hitting ---"
+      - name: Upload rat file if failure
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: "htmltest.log"
+          path: tmp/.htmltest/htmltest.log
