--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -28,7 +28,9 @@ jobs:
         run: hugo --minify
       - name: Setup Html Test
         run: curl https://htmltest.wjdp.uk | bash
-      - name: Lint
+      - name: Lint Self
+        run: ./bin/htmltest -s
+      - name: Lint External
         run: ./bin/htmltest
       - name: Print lint failed list if failure
         if: failure()
