--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -35,9 +35,12 @@ jobs:
       - name: Print lint failed list if failure
         if: failure()
         run: cat tmp/.htmltest/htmltest.log | grep -v "hitting ---"
-      - name: Upload rat file if failure
+      - name: Pack lint result if failure
+        if: failure()
+        run: 7z a ${{ github.workspace }}/htmltest.zip tmp/.htmltest/* -r
+      - name: Upload lint result failure
         if: failure()
         uses: actions/upload-artifact@v2
         with:
-          name: "htmltest.log"
-          path: tmp/.htmltest/htmltest.log
+          name: "htmltest.zip"
+          path: htmltest.zip
