--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         env:
           HUGO_ENV: production
-        run: hugo --minify
+        run: hugo --minify --baseURL /
       - name: Setup Html Test
         run: curl https://htmltest.wjdp.uk | bash
       - name: Lint Self
