temp ignore mesh

--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -7,6 +7,8 @@ LogLevel: 1
 IgnoreURLs: [
   # starter not available => temp ignore
   "http://start.dubbo.io",
+  # mesh
+  "https://github.com/apache/dubbo-go-samples/tree/master/route/meshroute",
   # edit page => always ignore
   "https://github.com/apache/dubbo-website/edit/master/content/.*",
   "https://github.com/apache/dubbo-website/new/master/content/.*",
