Add github actions ref cache

--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -28,6 +28,11 @@ jobs:
         run: hugo --minify --baseURL /
       - name: Setup Html Test
         run: curl https://htmltest.wjdp.uk | bash
+      - name: Cache Html Test Ref
+        uses: actions/cache@v2
+        with:
+          path: tmp/.htmltest/refcache.json
+          key: ${{ runner.os }}-htmltest-ref
       - name: Lint Self
         run: ./bin/htmltest -s
       - name: Lint External
