Add hourly check

--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -1,6 +1,12 @@
 name: Link Check
 
-on: [push, pull_request, workflow_dispatch]
+
+on:
+  schedule:
+    - cron: '0 * * * *'
+  push:
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build_and_deploy_job:
