--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -4,6 +4,7 @@ IgnoreInternalEmptyHash: true
 IgnoreDirectoryMissingTrailingSlash: true
 ExternalTimeout: 15
 LogLevel: 1
+CacheExpires: 2h
 IgnoreURLs: [
   # starter not available => temp ignore
   "http://start.dubbo.io",
