--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   link_check_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Link Check Job
     steps:
@@ -38,7 +37,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: tmp/.htmltest/refcache.json
-          key: ${{ runner.os }}-htmltest-ref
+          key: ${{ runner.os }}-htmltest-ref-${{ github.run_number }}-${{ github.run_id }}-
+          restore-keys: |
+            ${{ runner.os }}-htmltest-ref-
       - name: Lint Self
         run: ./bin/htmltest -s
       - name: Lint External
