Add always upload cache

--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Html Test
         run: curl https://htmltest.wjdp.uk | bash
       - name: Cache Html Test Ref
-        uses: actions/cache@v2
+        uses: ./.github/actions/always-upload-cache
         with:
           path: tmp/.htmltest/refcache.json
           key: ${{ runner.os }}-htmltest-ref-${{ github.run_number }}-${{ github.run_id }}-
