--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule ".github/themes/docsy"]
 	path = .github/themes/docsy
 	url = https://github.com/google/docsy.git
+[submodule ".github/actions/always-upload-cache"]
+	path = .github/actions/always-upload-cache
+	url = https://github.com/pat-s/always-upload-cache.git
